--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -11002,6 +11002,7 @@ a[data-toggle=collapse] {
 body {
   font-family: "Poppins", sans-serif;
   background: #fafafa;
+  overflow-x: hidden;
 }
 
 p {
