Working on: customize admin site => on_processing ()

--- a/resources/sass/admin/_layout.sass
+++ b/resources/sass/admin/_layout.sass
@@ -97,3 +97,9 @@ ul ul a
   font-size: 0.9em !important
   padding-left: 30px !important
   background: #6d7fcc
+
+.image-preview-listing
+  width: 40px
+  height: 40px
+  background-position: center !important
+  background-size: cover !important
