--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -11066,3 +11066,10 @@ ul ul a {
   background: #6d7fcc;
 }
 
+.image-preview-listing {
+  width: 40px;
+  height: 40px;
+  background-position: center !important;
+  background-size: cover !important;
+}
+
