--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10962,3 +10962,15 @@ a.text-dark:focus {
   }
 }
 
+a.normal-style {
+  color: #000 !important;
+  text-decoration: none !important;
+  background-color: transparent !important;
+}
+
+a.normal-style:hover {
+  color: #3490dc !important;
+  text-decoration: none !important;
+  background-color: transparent !important;
+}
+
